# serving

./: .bazelrc  .codecov.yaml  .gitattributes  .gitignore  .golangci.yaml  .ko.yaml  .schemapatch.yaml  ACTIVATOR_FIXES.md  AUTHORS  BUILD  BUILD.bazel  BUILD.ca_bundle  BUILD.istio  CHANGELOG.md  CLAUDE.md  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  Gopkg.toml  Makefile  OWNERS  OWNERS_ALIASES  PR35_REVIEW_ANALYSIS.md  PUSH_POD_DISCOVERY_REVIEW.md  QP_AUTHORITATIVE_REFACTOR.md  README.md  SECURITY.md  TEST_FIXES_NEEDED.md  UINT64_MIGRATION_PLAN.md  WORKSPACE  activator.yaml  build.yaml  buildtemplate.yaml  ca_bundle.bzl  cert-manager.yaml  ci  clusterrolebinding.yaml  code-of-conduct.md  configmap.yaml  (+29 more)
cmd/ela-activator/: BUILD.bazel  main.go
cmd/ela-autoscaler/: BUILD.bazel  OWNERS  main.go
cmd/ela-controller/: BUILD.bazel  main.go
cmd/ela-queue/: BUILD.bazel  main.go
cmd/ela-webhook/: BUILD.bazel  OWNERS  main.go
cmd/queue/: BUILD.bazel  OWNERS  execprobe.go  execprobe_test.go  go.mod  go.sum  main.go  main_test.go  nodeps_test.go  queue.go
config/: 100-namespace.yaml  200-addressable-resolvers-clusterrole.yaml  200-clusterrole-certmanager.yaml  200-clusterrole-istio.yaml  200-clusterrole-metrics.yaml  200-clusterrole-namespaced.yaml  200-clusterrole-ns-wildcard-certs.yaml  200-clusterrole-psp.yaml  200-clusterrole.yaml  200-clusterrolebinding.yaml  200-podspecable-bindings-clusterrole.yaml  200-serviceaccount.yaml  201-clusterrolebinding-metrics-server.yaml  201-clusterrolebinding-metrics.yaml  201-clusterrolebinding.yaml  201-rolebinding-metrics-server.yaml  202-gateway.yaml  202-istio-gateway.yaml  203-local-gateway.yaml  204-istio-default-domain.yaml  300-certificate.yaml  300-certmanager-crd.yaml  300-clusteringress.yaml  300-configuration.yaml  300-ingress.yaml  300-kpa.yaml  300-metric.yaml  300-pa.yaml  300-revision.yaml  300-route.yaml  300-service.yaml  300-sks.yaml  400-activator-service.yaml  400-autoscaler-hpa-service.yaml  400-controller-service.yaml  400-sutoscaler-service.yaml  400-webhook-service.yaml  500-webhook-configmap-validation.yaml  500-webhook-configuration.yaml  500-webhook-defaulting.yaml  (+59 more)
config/cert-manager/: 200-clusterrole.yaml  config.yaml  controller.yaml
config/core/: 100-namespace.yaml  200-serviceaccount.yaml  300-imagecache.yaml  300-knative-selfsigned-issuer.yaml  300-knativecertificate.yaml  300-secret.yaml  999-cache.yaml  activator-ds.yaml  dummy.go  placeholder.go
config/custom-metrics/: 100-clusterrolebinding-server.yaml  100-rolebinding-server.yaml  200-clusterrole-metrics.yaml  201-cluserrolebinding-metrics.yaml  300-apiservice.yaml
config/domain-mapping/: controller.yaml  placeholder.go  webhook.yaml
config/experiments/: config-experiments.yaml
config/grafana/: BUILD  dashboard-definitions.yaml  dashboards.yaml  datasources.yaml  deployment.yaml  service-public.yaml
config/hpa-autoscaling/: 201-clusterrolebinding-metrics.yaml  201-rolebinding-metrics-server.yaml  controller-service.yaml  controller.yaml  custom-metrics-apiservice.yaml  dummy.go  placeholder.go
config/istio-ingress/: 200-clusterrole.yaml  202-gateway.yaml  config.yaml  controller.yaml  webhook.yaml
config/monitoring/: 100-namespace.yaml  BUILD  README.md  core  namespace.yaml  third_party
config/namespace-wildcard-certs/: 200-clusterrole.yaml  controller.yaml  dummy.go
config/namespace-wildcards/: controller.yaml
config/networking/: certificate.yaml  config-network.yaml  domain.yaml  ingress.yaml  realm.yaml
config/post-install/: 100-istio-default-domain.yaml  cleanup.yaml  default-domain.yaml  dummy.go  placeholder.go  storage-version-migration.yaml
config/prometheus/: BUILD
config/tls/: config-certmanager.yaml  networking-certmanager.yaml
config/v1alpha1/: 300-configuration.yaml  300-revision.yaml  300-route.yaml  300-service.yaml
config/v1beta1/: 300-configuration.yaml  300-revision.yaml  300-route.yaml  300-service.yaml
pkg/activator/: .#revision.go  BUILD.bazel  OWNERS  README.md  activator.go  activator_test.go  breaker.go  breaker_test.go  clientmetrics.go  dedupe.go  dedupe_test.go  endpoint_observer.go  endpoint_observer_test.go  endpointlistener.go  handler.go  handler_test.go  localscheduler.go  metrics.go  old_activator_test.go  prober.go  prober_test.go  proxy.go  retryingtripper.go  revision.go  revision_backends.go  revision_backends_test.go  revision_test.go  stat_reporter.go  stat_reporter_test.go  stats_reporter.go  stats_reporter_test.go  throttler.go  throttler_test.go
pkg/autoscaler/: .#autoscaler.go  .#multiscaler.go  BUILD.bazel  OWNERS  README.md  ROADMAP.md  autoscaler.go  autoscaler_test.go  collector.go  collector_test.go  config.go  config_test.go  doc.go  dynamic_config.go  dynamic_config_test.go  envoy_scrape_client.go  http_scrape_client.go  http_scrape_client_test.go  kpa_scaler.go  kpa_scaler_test.go  metrics_provider.go  metrics_provider_test.go  multiscaler.go  multiscaler_test.go  provider.go  revision_scaler.go  revision_scaler_test.go  roadmap-2018.md  sample_size.go  sample_size_test.go  stats_reporter.go  stats_reporter_test.go  stats_scraper.go  stats_scraper_test.go  zz_generated.deepcopy.go
pkg/controller/: BUILD.bazel  OWNERS  config.go  config_test.go  controller.go  doc.go  keep.go  label_helpers.go  logging_constants.go  names.go  owner_references.go  promethus_labels.go  reconciler.go
test/: BUILD.bazel  OWNERS  README.md  adding_tests.md  apicoverage.sh  cleanup.go  clients.go  cluster.sh  common.go  configuration.go  conformance.go  crd.go  crd_checks.go  crd_polling.go  dumper.sh  e2e-auto-tls-tests.sh  e2e-auto-tls.sh  e2e-basic-entrypoint.sh  e2e-common.sh  e2e-external-domain-tls-tests.sh  e2e-internal-encryption-tests.sh  e2e-networking-library.sh  e2e-smoke-tests.sh  e2e-tests.sh  e2e-upgrade-tests.sh  e2e_constants.go  e2e_flags.go  example-build.yaml  generate-cert.sh  image_constants.go  kube_checks.go  kube_polling.go  library.sh  logging.go  minikube.sh  namespace.go  no-header.sh  performance-tests.sh  presubmit-tests.sh  prober.go  (+12 more)
(+4442 files in other folders)
