load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_prefix")

go_prefix("github.com/elafros/elafros")

gazelle(
    name = "gazelle",
    external = "vendored",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "everything",
    objects = [
        "//third_party/istio-0.6.0/install/kubernetes:istio",
        "//third_party/config/build:everything",
        "//config:everything",
    ],
)
