package(default_visibility = ["//visibility:public"])

load("@k8s_object//:defaults.bzl", "k8s_object")

k8s_object(
    name = "elaconfig",
    template = "elaconfig.yaml",
)

k8s_object(
    name = "controller",
    images = {
        "github.com/elafros/elafros/cmd/ela-controller": "//cmd/ela-controller:image",
        "github.com/elafros/elafros/cmd/ela-queue": "//cmd/ela-queue:image",
        "github.com/elafros/elafros/cmd/ela-autoscaler": "//cmd/ela-autoscaler:image",
    },
    template = "controller.yaml",
)

k8s_object(
    name = "webhook",
    images = {
        "github.com/elafros/elafros/cmd/ela-webhook": "//cmd/ela-webhook:image",
    },
    template = "webhook.yaml",
)

k8s_object(
    name = "activator",
    images = {
        "github.com/elafros/elafros/cmd/ela-activator": "//cmd/ela-activator:image",
    },
    template = "activator.yaml",
)

k8s_object(
    name = "namespace",
    template = "a-namespace.yaml",
)

k8s_object(
    name = "serviceaccount",
    template = "serviceaccount.yaml",
)

k8s_object(
    name = "clusterrolebinding",
    template = "clusterrolebinding.yaml",
)

k8s_object(
    name = "route",
    template = "route.yaml",
)

k8s_object(
    name = "elawebhookservice",
    template = "elawebhookservice.yaml",
)

k8s_object(
    name = "ela-activator-service",
    template = "ela-activator-service.yaml",
)

k8s_object(
    name = "configuration",
    template = "configuration.yaml",
)

k8s_object(
    name = "revision",
    template = "revision.yaml",
)

k8s_object(
    name = "service",
    template = "service.yaml",
)

k8s_object(
    name = "controllerservice",
    template = "controller-service.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "authz",
    objects = [
        ":serviceaccount",
        ":clusterrolebinding",
    ],
)

k8s_objects(
    name = "crds",
    objects = [
        ":route",
        ":configuration",
        ":revision",
        ":service",
    ],
)

k8s_objects(
    name = "everything",
    objects = [
        ":namespace",
        ":authz",
        ":crds",
        ":elaconfig",
        ":controller",
        ":controllerservice",
        ":webhook",
        ":elawebhookservice",
        ":activator",
        ":ela-activator-service",
    ],
)
