load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/knative/serving/cmd/queue",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/util:go_default_library",
        "//pkg/apis/serving/v1alpha1:go_default_library",
        "//pkg/autoscaler:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/logging/logkey:go_default_library",
        "//pkg/h2c:go_default_library",
        "//pkg/queue:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/gorilla/websocket:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/golang.org/x/net/http2:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "ela-queue",
    embed = [":go_default_library"],
    pure = "on",
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":ela-queue",
    visibility = ["//visibility:public"],
)
