load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "autoscaler.go",
        "doc.go",
        "stats_reporter.go",
    ],
    importpath = "github.com/knative/serving/pkg/autoscaler",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/josephburnett/k8sflag/pkg/k8sflag:go_default_library",
        "//vendor/go.opencensus.io/stats:go_default_library",
        "//vendor/go.opencensus.io/stats/view:go_default_library",
        "//vendor/go.opencensus.io/tag:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "autoscaler_test.go",
        "stats_reporter_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/josephburnett/k8sflag/pkg/k8sflag:go_default_library",
        "//vendor/go.opencensus.io/stats/view:go_default_library",
    ],
)
