load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "constants.go",
        "logger.go",
    ],
    importpath = "github.com/elafros/elafros/pkg/logging",
    visibility = ["//visibility:public"],
    deps = ["//vendor/go.uber.org/zap:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_test.go",
        "logger_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//vendor/go.uber.org/zap:go_default_library"],
)
