load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["stats.go", "breaker.go"],
    importpath = "github.com/elafros/elafros/pkg/queue",
    visibility = ["//visibility:public"],
    deps = ["//pkg/autoscaler:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["stats_test.go", "breaker_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//pkg/autoscaler:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
    ],
)
