load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["route_test.go"],
    data = [
        "go_default_files",
    ],
    deps = [
        "//pkg/apis/ela/v1alpha1:go_default_library",
        "//test:go_default_library",
        "//vendor/github.com/mattbaird/jsonpatch:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth/gcp:go_default_library",
    ],
)

filegroup(
    name = "go_default_files",
    srcs = [
        "kubeconfig",
    ],
)
