load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "fake_retryingtripper.go"
    ],
    importpath = "github.com/elafros/elafros/pkg/activator/fake",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/activator:go_default_library",
    ],
)