load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["lib.go"],
    importpath = "github.com/google/elafros/pkg/autoscaler/lib",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/autoscaler/types:go_default_library",
    ],
)
