load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["configuration.go"],
    importpath = "github.com/knative/serving/pkg/controller/configuration",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/ela:go_default_library",
        "//pkg/apis/ela/v1alpha1:go_default_library",
        "//pkg/client/clientset/versioned:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/client/listers/ela/v1alpha1:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/logging/logkey:go_default_library",
        "//vendor/github.com/knative/build/pkg/apis/build/v1alpha1:go_default_library",
        "//vendor/github.com/knative/build/pkg/client/clientset/versioned:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "configuration_test.go",
        "queueing_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/ela:go_default_library",
        "//pkg/apis/ela/v1alpha1:go_default_library",
        "//pkg/client/clientset/versioned/fake:go_default_library",
        "//pkg/client/informers/externalversions:go_default_library",
        "//pkg/controller:go_default_library",
        "//pkg/controller/testing:go_default_library",
        "//vendor/github.com/knative/build/pkg/apis/build/v1alpha1:go_default_library",
        "//vendor/github.com/knative/build/pkg/client/clientset/versioned/fake:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/client-go/informers:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/fake:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
